# ASI_grupa_6

./: .gitignore  ASI.ipynb  Heart Disease Evaluation App ASI 1.docx  dane.csv  dane2.csv  data_float_point.txt  environment.yml  homepage.py  pyproject.toml  readme.md  requirements.txt  session_store.db  sprawdzenie_tabel_sql.py  stats.json  zapisywanie_modeli_debugging.py
asi-grupa-6/: .gitignore  Dockerfile  README.md  homepage.py  homepage_z_bazki.py  pyproject.toml  requirements.txt  requirements_linki.txt  session_store.db  stats.json  zapisywanie_tabel_debugging.py
asi-grupa-6/conf/base/: catalog.yml  parameters_data_science.yml  parameters_model_evaluation.yml
asi-grupa-6/data/02_intermediate/: preprocessed_health.pq
asi-grupa-6/data/06_models/: autoML_model.pickle
asi-grupa-6/docs/source/: conf.py
asi-grupa-6/notebooks/: Heart_disease_classification.ipynb
asi-grupa-6/src/asi_grupa_6/: __init__.py  __main__.py  pipeline_registry.py  settings.py
asi-grupa-6/src/heart_disease/: __main__.py
asi-grupa-6/tests/pipelines/data_science/: test_pipeline.py
asi-grupa-6/tests/pipelines/model_evaluation/: test_pipeline.py
asi-grupa-6/wandb/: latest-run
asi-grupa-6/wandb/run-20240528_192756-nowkow9x/: run-nowkow9x.wandb
asi-grupa-6/wandb/run-20240528_192756-nowkow9x/files/: config.yaml  wandb-summary.json
asi-grupa-6/wandb/run-20240528_193022-cmynaylm/files/: wandb-summary.json
asi-grupa-6/wandb/run-20240528_193905-1mr6bmmo/: run-1mr6bmmo.wandb
asi-grupa-6/wandb/run-20240528_203017-0af9rpod/: run-0af9rpod.wandb
notebooks/: ASI_new_dataset.ipynb  (+1 more)
(+104 files in other folders)
